--- a/django/templates/base.html
+++ b/django/templates/base.html
@@ -7,6 +7,21 @@
     <title>Productly</title>
 </head>
 <body>
+    {% comment %} ? menu de todas las paginas {% endcomment %}
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href=" {% url 'inicio' %} ">Inicio</a>
+              <a class="nav-link" href="{% url 'productos:index' %}">Productos</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <div class="container">
         {% block content %}
 
